[package]
name = "basic_log"
description = "A basic logging crate for Rust."
version = "0.1.1"
authors = ["mxr <eetu.kivelae@gmail.com>"]
edition = "2018"
license = "MPL-2.0"
repository = "https://github.com/mxrr/basic_log"
keywords = ["log"]
readme = "README.md"
homepage = "https://github.com/mxrr/basic_log"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4", features = ["std"] }
colored = "2"
chrono = "0.4"